Use new Java 11 HttpClient for WebCrawlingHarvester and OAI (this should improve speed and redirects)