@@ -16,14 +16,21 @@
 
 package de.pangaea.metadataportal.harvester;
 
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.CookieManager;
+import java.net.CookiePolicy;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpClient.Redirect;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.time.Instant;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Locale;
@@ -32,8 +39,8 @@ import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.zip.GZIPInputStream;
-import java.util.zip.InflaterInputStream;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.xml.transform.sax.SAXSource;
 
@@ -44,8 +51,7 @@ import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.DefaultHandler;
 
 import de.pangaea.metadataportal.config.HarvesterConfig;
-import de.pangaea.metadataportal.processor.ElasticsearchConnection;
-import de.pangaea.metadataportal.utils.SimpleCookieHandler;
+import de.pangaea.metadataportal.utils.HttpClientUtils;
 import de.pangaea.metadataportal.utils.StaticFactories;
 
 /**
@@ -96,15 +102,23 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
   public static final Set<String> HTML_CONTENT_TYPES = new HashSet<>(
       Arrays.asList("text/html", "application/xhtml+xml"));
   
+  public static final String USER_AGENT = new StringBuilder("Java/")
+      .append(Runtime.version()).append(" (")
+      .append(de.pangaea.metadataportal.Package.getProductName())
+      .append('/').append(de.pangaea.metadataportal.Package.getVersion())
+      .append("; WebCrawlingHarvester)").toString();
+  
   // Class members
   private String baseURL;
   private final Pattern filenameFilter, excludeUrlPattern;
   private final Set<String> contentTypes = new HashSet<>();
   private final int retryCount;
   private final int retryTime;
-  private final int timeout;
+  private final Duration timeout;
+  private final String authorizationHeader;
   private final long pauseBetweenRequests;
-  
+  private final HttpClient httpClient;
+    
   private Set<String> harvested = new HashSet<>();
   private SortedSet<String> needsHarvest = new TreeSet<>();
   
@@ -116,8 +130,8 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     String s = iconfig.properties.getProperty("baseUrl");
     if (s == null) throw new IllegalArgumentException(
         "Missing base URL to start harvesting (property \"baseUrl\")");
-    URL u = new URL(s);
-    String proto = u.getProtocol().toLowerCase(Locale.ROOT);
+    URI u = new URI(s);
+    String proto = u.getScheme().toLowerCase(Locale.ROOT);
     if (!("http".equals(proto) || "https".equals(proto))) throw new IllegalArgumentException(
         "WebCrawlingHarvester only allows HTTP(S) as network protocol!");
     baseURL = u.toString();
@@ -130,7 +144,8 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     
     retryCount = Integer.parseInt(iconfig.properties.getProperty("retryCount", Integer.toString(DEFAULT_RETRY_COUNT)));
     retryTime = Integer.parseInt(iconfig.properties.getProperty("retryAfterSeconds", Integer.toString(DEFAULT_RETRY_TIME)));
-    timeout = Integer.parseInt(iconfig.properties.getProperty("timeoutAfterSeconds", Integer.toString(DEFAULT_TIMEOUT)));
+    timeout = Duration.ofSeconds(Integer.parseInt(iconfig.properties.getProperty("timeoutAfterSeconds", Integer.toString(DEFAULT_TIMEOUT))));
+    authorizationHeader = iconfig.properties.getProperty("authorizationHeader");
     pauseBetweenRequests = Long.parseLong(iconfig.properties.getProperty("pauseBetweenRequests", "0"));
     
     s = iconfig.properties.getProperty("filenameFilter");
@@ -138,6 +153,12 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     
     s = iconfig.properties.getProperty("excludeUrlPattern");
     excludeUrlPattern = (s == null) ? null : Pattern.compile(s);
+    
+    httpClient = HttpClient.newBuilder()
+        .followRedirects(Redirect.NORMAL)
+        .connectTimeout(timeout)
+        .cookieHandler(new CookieManager(null, CookiePolicy.ACCEPT_ORIGINAL_SERVER))
+        .build();
     
     // initialize and test for HTML SAX Parser
     try {
@@ -148,30 +169,18 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
   }
 
   @Override
-  public void open(ElasticsearchConnection es, String targetIndex) throws Exception {
-    super.open(es, targetIndex);
-    SimpleCookieHandler.INSTANCE.enable();
-  }
-  
-  @Override
-  public void close(boolean cleanShutdown) throws Exception {
-    SimpleCookieHandler.INSTANCE.disable();
-    super.close(cleanShutdown);
-  }
-  
-  @Override
   public void harvest() throws Exception {
     // process this URL directly and save possible redirect as new base
     String urlStr = baseURL;
     baseURL = ""; // disable base checking for the entry point to follow a
                   // initial redirect for sure
     harvested.add(urlStr);
-    URL newbaseURL = processURL(new URL(urlStr));
+    URI newbaseURL = processURL(new URI(urlStr));
     
     // get an URL that points to the current directory
     // from now on this is used as baseURL
     baseURL = ("".equals(newbaseURL.getPath())) ? newbaseURL.toString()
-        : new URL(newbaseURL, "./").toString();
+        : newbaseURL.resolve("./").toString();
     log.debug("URL directory which harvesting may not escape: " + baseURL);
     
     // remove invalid URLs from queued list (because until now we had no baseURL
@@ -188,7 +197,7 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
       urlStr = needsHarvest.first();
       needsHarvest.remove(urlStr);
       harvested.add(urlStr);
-      processURL(new URL(urlStr));
+      processURL(new URI(urlStr));
     }
   }
   
@@ -197,7 +206,8 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     super.enumerateValidHarvesterPropertyNames(props);
     props.addAll(Arrays.asList("baseUrl", "retryCount",
         "retryAfterSeconds", "timeoutAfterSeconds", "filenameFilter",
-        "contentTypes", "excludeUrlPattern", "pauseBetweenRequests"
+        "contentTypes", "excludeUrlPattern", "pauseBetweenRequests",
+        "authorizationHeader"
     ));
   }
   
@@ -218,75 +228,7 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     needsHarvest.add(url);
   }
   
-  private InputStream sendHTTPRequest(HttpURLConnection conn, String method)
-      throws IOException {
-    try {
-      conn.setConnectTimeout(timeout * 1000);
-      conn.setReadTimeout(timeout * 1000);
-      conn.setRequestMethod(method);
-      
-      StringBuilder ua = new StringBuilder("Java/")
-          .append(Runtime.version()).append(" (")
-          .append(de.pangaea.metadataportal.Package.getProductName())
-          .append('/').append(de.pangaea.metadataportal.Package.getVersion())
-          .append("; WebCrawlingHarvester)");
-      conn.setRequestProperty("User-Agent", ua.toString());
-      
-      conn.setRequestProperty("Accept-Encoding",
-          "gzip, deflate, identity;q=0.3, *;q=0");
-      conn.setRequestProperty("Accept-Charset", StandardCharsets.UTF_8.name() + ", *;q=0.5");
-      
-      StringBuilder ac = new StringBuilder();
-      for (String c : contentTypes)
-        ac.append(c).append(", ");
-      for (String c : HTML_CONTENT_TYPES)
-        ac.append(c).append(", ");
-      ac.append("*;q=0.1");
-      conn.setRequestProperty("Accept", ac.toString());
-      
-      conn.setUseCaches(false);
-      conn.setInstanceFollowRedirects(true);
-      
-      log.debug("Opening connection...");
-      InputStream in = null;
-      try {
-        conn.connect();
-        in = conn.getInputStream();
-      } catch (IOException ioe) {
-        int after, code;
-        try {
-          after = conn.getHeaderFieldInt("Retry-After", -1);
-          code = conn.getResponseCode();
-        } catch (IOException ioe2) {
-          after = -1;
-          code = -1;
-        }
-        if (code == HttpURLConnection.HTTP_UNAVAILABLE && after > 0) throw new RetryAfterIOException(
-            after, ioe);
-        throw ioe;
-      }
-      
-      // cast stream if encoding different from identity
-      if (!"HEAD".equals(method)) {
-        String encoding = conn.getContentEncoding();
-        if (encoding == null) encoding = "identity";
-        encoding = encoding.toLowerCase(Locale.ROOT);
-        
-        log.debug("HTTP server uses " + encoding + " content encoding.");
-        if ("gzip".equals(encoding)) in = new GZIPInputStream(in);
-        else if ("deflate".equals(encoding)) in = new InflaterInputStream(in);
-        else if (!"identity".equals(encoding)) throw new IOException(
-            "Server uses an invalid content encoding: " + encoding);
-      }
-      
-      return in;
-    } catch (FileNotFoundException fnfe) {
-      log.warn("Cannot find URL '" + conn.getURL() + "'.");
-      return null;
-    }
-  }
-  
-  private void analyzeHTML(final URL baseURL, final InputSource source)
+  private void analyzeHTML(final URI baseURL, final InputSource source)
       throws Exception {
     XMLReader r = htmlReaderClass.getConstructor().newInstance();
     r.setFeature("http://xml.org/sax/features/namespaces", true);
@@ -298,7 +240,7 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     
     DefaultHandler handler = new DefaultHandler() {
       
-      private URL base = baseURL; // make it unfinal ;-)
+      private URI base = baseURL; // make it unfinal ;-)
       private int inBODY = 0;
       private int inFRAMESET = 0;
       private int inHEAD = 0;
@@ -317,8 +259,8 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
           if ("BASE".equals(localName)) {
             String newBase = atts.getValue("href");
             if (newBase != null) try {
-              base = new URL(base, newBase);
-            } catch (MalformedURLException mue) {
+              base = base.resolve(newBase);
+            } catch (IllegalArgumentException mue) {
               // special exception to stop processing
               log.debug("Found invalid BASE-URL: " + url);
               throw new SAXException("#panFMP#HTML_INVALID_BASE");
@@ -340,8 +282,8 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
         }
         // append a possible url to queue
         if (url != null) try {
-          queueURL(new URL(base, url).toString());
-        } catch (MalformedURLException mue) {
+          queueURL(base.resolve(url).toString());
+        } catch (IllegalArgumentException mue) {
           // there may be javascript:-URLs in the document or something other
           // we will not throw errors!
           log.debug("Found invalid URL: " + url);
@@ -373,7 +315,7 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
     }
   }
   
-  private boolean acceptFile(URL url) {
+  private boolean acceptFile(URI url) {
     if (filenameFilter == null) return true;
     String name = url.getPath();
     int p = name.lastIndexOf('/');
@@ -383,113 +325,135 @@ public class WebCrawlingHarvester extends SingleFileEntitiesHarvester {
   }
   
   @SuppressWarnings("resource")
-  private URL processURL(URL url) throws Exception {
+  private URI processURL(URI uri) throws Exception {
     for (int retry = 0; retry <= retryCount; retry++) {
-      log.info("Requesting props of '" + url + "'...");
+      log.info("Requesting props of '" + uri + "'...");
+      var proto = uri.getScheme().toLowerCase(Locale.ROOT);
+      if (!("http".equals(proto) || "https".equals(proto))) throw new IllegalArgumentException(
+          "WebCrawlingHarvester only allows HTTP(S) as network protocol!");
+      final var reqBuilder = HttpRequest.newBuilder(uri).GET()
+          .timeout(timeout)
+          .setHeader("User-Agent", USER_AGENT)
+          .setHeader("Accept-Charset", StandardCharsets.UTF_8.name() + ", *;q=0.5")
+          .setHeader("Accept", "text/xml, application/xml, *;q=0.1")
+          .setHeader("Accept", Stream.of(contentTypes, HTML_CONTENT_TYPES, Set.of("*;q=0.1"))
+              .flatMap(Set::stream).distinct().collect(Collectors.joining(", ")));
+      HttpClientUtils.sendCompressionHeaders(reqBuilder);
+      if (authorizationHeader != null) {
+        reqBuilder.header("Authorization", authorizationHeader);
+      }
+      
+      log.debug("Opening connection...");
       try {
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        InputStream in = sendHTTPRequest(conn, "HEAD");
-        if (in == null) return url;
-        in.close(); // it is empty
+        final HttpResponse<InputStream> resp;
+        try {
+          resp = httpClient.send(reqBuilder.build(), BodyHandlers.ofInputStream());
+        } catch (IOException ioe) {
+          throw new RetryAfterIOException(retryTime, ioe);
+        }
+        final int statusCode = resp.statusCode();
+        switch (statusCode) {
+          case HttpURLConnection.HTTP_UNAVAILABLE:
+            var retryAfter = resp.headers().firstValue("Retry-After").map(Integer::parseInt);
+            if (retryAfter.isPresent()) {
+              throw new RetryAfterIOException(retryAfter.get(),
+                  "Webserver returned '503 Service Unavailable', repeating after " + retryAfter.get() + "s.");
+            }
+            throw new IOException("Webserver unavailable (status 503)");
+          case HttpURLConnection.HTTP_OK:
+            break;
+          case HttpURLConnection.HTTP_NOT_FOUND:
+          case HttpURLConnection.HTTP_GONE:
+            log.warn("Cannot find URL '" + resp.uri() + "'.");
+            return uri;
+          default:
+            if (statusCode >= 500) {
+              throw new RetryAfterIOException(retryTime, "Webserver returned error code, repeating after " + retryTime + "s: " + statusCode);
+            }
+            throw new IOException("Webserver returned invalid status code: " + statusCode);
+        }
         
-        // check connection properties
-        String contentType = conn.getContentType();
-        String charset = null;
-        if (contentType != null) {
-          contentType = contentType.toLowerCase(Locale.ROOT);
-          int charsetStart = contentType.indexOf("charset=");
-          if (charsetStart >= 0) {
-            int charsetEnd = contentType.indexOf(";", charsetStart);
-            if (charsetEnd == -1) charsetEnd = contentType.length();
-            charsetStart += "charset=".length();
-            charset = contentType.substring(charsetStart, charsetEnd).trim();
+        try (final InputStream in = HttpClientUtils.getDecompressingInputStream(resp)) {
+          // check connection properties
+          String contentType = resp.headers().firstValue("Content-Type").orElse(null);
+          String charset = null;
+          if (contentType != null) {
+            contentType = contentType.toLowerCase(Locale.ROOT);
+            int charsetStart = contentType.indexOf("charset=");
+            if (charsetStart >= 0) {
+              int charsetEnd = contentType.indexOf(";", charsetStart);
+              if (charsetEnd == -1) charsetEnd = contentType.length();
+              charsetStart += "charset=".length();
+              charset = contentType.substring(charsetStart, charsetEnd).trim();
+            }
+            int contentEnd = contentType.indexOf(';');
+            if (contentEnd >= 0) contentType = contentType.substring(0,
+                contentEnd);
+            contentType = contentType.trim();
           }
-          int contentEnd = contentType.indexOf(';');
-          if (contentEnd >= 0) contentType = contentType.substring(0,
-              contentEnd);
-          contentType = contentType.trim();
-        }
-        log.debug("Charset from Content-Type: '" + charset
-            + "'; Type from Content-Type: '" + contentType + "'");
-        if (contentType == null) {
-          log.warn("Connection to URL '" + url
-              + "' did not return a content-type, skipping.");
-          return url;
-        }
-        
-        // if we got a redirect the new URL is now needed
-        URL newurl = conn.getURL();
-        if (!url.toString().equals(newurl.toString())) {
-          log.debug("Got redirect to: " + newurl);
-          url = newurl;
-          // check if it is below base
-          if (!url.toString().startsWith(baseURL)) return url;
-          // was it already harvested?
-          if (harvested.contains(url.toString())) return url;
-          // clean this new url from lists
-          needsHarvest.remove(url.toString());
-          harvested.add(url.toString());
-        }
-        
-        if (HTML_CONTENT_TYPES.contains(contentType)) {
-          log.info("Analyzing HTML links in '" + url + "'...");
+          log.debug("Charset from Content-Type: '" + charset
+              + "'; Type from Content-Type: '" + contentType + "'");
+          if (contentType == null) {
+            log.warn("Connection to URL '" + uri
+                + "' did not return a content-type, skipping.");
+            return uri;
+          }
+  
+          // if we got a redirect the new URL is now needed
+          URI newurl = resp.uri();
+          if (!uri.toString().equals(newurl.toString())) {
+            log.debug("Got redirect to: " + newurl);
+            uri = newurl;
+            // check if it is below base
+            if (!uri.toString().startsWith(baseURL)) return uri;
+            // was it already harvested?
+            if (harvested.contains(uri.toString())) return uri;
+            // clean this new url from lists
+            needsHarvest.remove(uri.toString());
+            harvested.add(uri.toString());
+          }
           
-          // reopen for GET
-          conn = (HttpURLConnection) url.openConnection();
-          in = sendHTTPRequest(conn, "GET");
-          if (in != null) try {
-            InputSource src = new InputSource(in);
-            src.setSystemId(url.toString());
+          if (HTML_CONTENT_TYPES.contains(contentType)) {
+            log.info("Analyzing HTML links in '" + uri + "'...");
+            
+            final InputSource src = new InputSource(in);
+            src.setSystemId(uri.toString());
             src.setEncoding(charset);
-            analyzeHTML(url, src);
-          } finally {
-            in.close();
-          }
-        } else if (contentTypes.contains(contentType)) {
-          if (acceptFile(url)) {
-            long lastModified = conn.getLastModified();
-            if (isDocumentOutdated(lastModified == 0L ? null : Instant.ofEpochMilli(lastModified))) {
-              log.info("Harvesting '" + url + "'...");
-              
-              // reopen for GET and parse as XML
-              conn = (HttpURLConnection) url.openConnection();
-              in = sendHTTPRequest(conn, "GET");
-              if (in != null) try {
-                InputSource src = new InputSource(in);
-                src.setSystemId(url.toString());
+            analyzeHTML(uri, src);
+          } else if (contentTypes.contains(contentType)) {
+            if (acceptFile(uri)) {
+              var lastModified = resp.headers().firstValue("Last-Modified").map(DateTimeFormatter.RFC_1123_DATE_TIME::parse).map(Instant::from).orElse(null);
+              if (isDocumentOutdated(lastModified)) {
+                log.info("Harvesting '" + uri + "'...");
+                
+                final InputSource src = new InputSource(in);
+                src.setSystemId(uri.toString());
                 src.setEncoding(charset);
-                SAXSource saxsrc = new SAXSource(StaticFactories.saxFactory
+                final SAXSource saxsrc = new SAXSource(StaticFactories.saxFactory
                     .newSAXParser().getXMLReader(), src);
-                addDocument(url.toString(), lastModified, saxsrc);
-              } finally {
-                in.close();
+                addDocument(uri.toString(), lastModified, saxsrc);
+              } else {
+                // add this empty doc here, to update datestamps for next
+                // harvesting
+                addDocument(uri.toString(), lastModified, null);
               }
-            } else {
-              // add this empty doc here, to update datestamps for next
-              // harvesting
-              addDocument(url.toString(), lastModified, null);
             }
           }
+          return uri;
         }
-        return url;
-      } catch (IOException ioe) {
+      } catch (RetryAfterIOException ioe) {
         int after = retryTime;
-        if (ioe instanceof RetryAfterIOException) {
-          if (retry >= retryCount) throw (IOException) ioe.getCause();
-          log.warn("HTTP server returned '503 Service Unavailable' with a 'Retry-After' value being set.");
-          after = ((RetryAfterIOException) ioe).getRetryAfter();
-        } else {
-          if (retry >= retryCount) throw ioe;
-          log.error("HTTP server access failed with exception: ", ioe);
-        }
+        if (retry >= retryCount) throw (IOException) ioe.getCause();
+        log.warn(ioe.getMessage());
+        after = ((RetryAfterIOException) ioe).getRetryAfter();
         log.info("Retrying after " + after + " seconds ("
             + (retryCount - retry) + " retries left)...");
         try {
           Thread.sleep(1000L * after);
         } catch (InterruptedException ie) {}
+        log.debug("Recreating digester instances to recover from incomplete parsers...");
       }
     }
     throw new IOException("Unable to properly connect HTTP server.");
   }
-  
 }
